po: update po/it_IT/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/pledge.po
+++ b/po/it_IT/pledge.po
@@ -12,8 +12,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -53,12 +53,12 @@ msgid "Pledge Payment Status"
 msgstr "Stato dell'impegno di pagamento"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
-msgstr "$%1-% dovuta per %2 (in ritardo)"
+msgid "%1 - due on %2 (overdue)"
+msgstr "$%1 - dovuta %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
-msgstr "$%1 - dovuta %2"
+msgid "%1 - due on %2"
+msgstr "%1 - dovuta %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -82,14 +82,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Frequenza degli impegni di pagamento"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Stato dell'impegno %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Stato del pagamento dell'ìimpegno %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "L'impegno è un test"
 
@@ -100,6 +92,10 @@ msgstr "Tipo finanziamento - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Pagina finanziaria - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -149,10 +145,6 @@ msgstr ""
 msgid "Pledge Cancelled Date"
 msgstr ""
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr ""
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Numero massimo di promemoria"
@@ -191,12 +183,12 @@ msgid "Reminders Sent"
 msgstr "Promemoria spedita"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Modifica Pagamento Offerte Programmate"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr ""
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Impegno di"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -303,6 +295,10 @@ msgid "Pledger Name or Email"
 msgstr "Nome o email della persona che ha preso l'impegno"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr ""
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Trova Impegni di pagamento"
 
@@ -311,12 +307,10 @@ msgid "Delete Pledges"
 msgstr "Elimina impegni di pagamento"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Impegni di pagamento cancellati: %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Totale impegni di pagamento selezionati: %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -325,6 +319,30 @@ msgstr "Stampa elenco impegni di pagamento"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "Motore impegni di pagamento CiviCRM"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "accedi a CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "Visualizza impegno"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "modifica impegno"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Crea ed aggiorna impegni di pagamento"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "elimina in CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Elimina impegni di pagamento"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -342,11 +360,11 @@ msgid ""
 "pledge payments."
 msgstr "Annullamento di questo impegno sarà anche cancellare qualsiasi linea (e non completa) di impegni di pagamento."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Visualizza impegno"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Modifica impegno"
 
@@ -354,7 +372,7 @@ msgstr "Modifica impegno"
 msgid "Cancel Pledge"
 msgstr "Annulla impegno"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Cancella impegno"
 
@@ -375,20 +393,12 @@ msgid "Pledge Search"
 msgstr "Ricerca impegni"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Stampa impegno"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Esportazione impegni"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Modifica Pagamento Offerte Programmate"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Data prevista per il pagamento impegno"
+msgid "Adjust scheduled amount"
+msgstr ""
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -397,10 +407,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Non è possibie inviare un ringraziamento per questo impegno perché nel contatto non è memorizzato un indirizzo email. Se volete inviare un ringraziamento, cliccate su Annulla e poi Modifica dalla tab Sommario per aggiungere un indirizzo email prima di memorizzare l'impegno."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Nuovo impegno di pagamento"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -417,6 +423,10 @@ msgid ""
 msgstr "Se si vuole mantenere una traccia contabile ed evitare di perdere i dati di pagamento, si prega di considerare la cancellazione dell'offerta. Per impostare lo stato dell'offerta su Cancellata ed eliminare tutti i pagamenti non effettuati, cliccare prima Cancella su questo modulo. Dopo cliccare su collegamento &gt; nella lista dell'offerta e selezionare l'azione Cancella."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Impegno di"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -424,6 +434,7 @@ msgid ""
 msgstr "Il totale dell'offerta è cambiato in seguito a modifiche di pagamento. L'importo dell'offerta originale era %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "rate di"
 
@@ -446,10 +457,6 @@ msgstr "Data del primo pagamento dell'impegno"
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Automaticamente un' e-mail una conferma di questo impegno a %1?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Automaticamente un'e-mail una conferma di questo impegno a"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -475,20 +482,12 @@ msgstr "Gli impegni di pagamento sono \"in attesa\" finché non venga ricevuto i
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Fare clic su OK per salvare questo impegno e inviare un avviso a %1 ora"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr ""
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Impegno di"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "rata di"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "ogni"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -515,10 +514,6 @@ msgid "Payments Ended Date"
 msgstr "Data fine pagamenti"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Nessun impegno di pagamento trovato."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -531,8 +526,16 @@ msgid ""
 msgstr "Se stai cercando all'interno di un intervallo di date o importi, prova una gamma più ampia di valori."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Clicca %1 per vedere i pagamenti degli impegni di pagamento."
+msgid "Click arrow to view pledge payments."
+msgstr "Clicca la freccia per vedere i pagamenti degli impegni di pagamento."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Mostra pagamenti"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Nascondi pagamenti"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -552,10 +555,6 @@ msgstr "Che deve essere pagato"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Data registrazione"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Impegno assunto"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -606,20 +605,12 @@ msgid "Amount Paid"
 msgstr "Importo Pagato"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Visualizza pagamento</a>"
+msgid "Credit Card Payment"
+msgstr "Pagamento con carta di credito "
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Record di pagamento (assegno, contanti, EFT ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Invia il pagamento con Carta di Credito</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Modifica Pagamento Programmato</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Modifica Pagamento Programmato"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -639,9 +630,10 @@ msgstr "In ordine al promemoria da inviare:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "Il tuo amministratore del sito deve configurare lo script che aggiorna uno status di impegno di pagamento e invia il promemoria (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr ""
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -661,13 +653,17 @@ msgstr "Impegni di pagamento ricevuti da %1 dall'inizio."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Fare clic su <a href='%1'>Aggiungi impegno</a> per registrare un nuovo impegno ricevuto da questo contatto."
+msgstr ""
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Nessun impegno di pagamento memorizzato da parte di questo contatto."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -793,94 +789,38 @@ msgstr "Grazie per il tuo generoso contributo."
 msgid "Pledge Payment Reminder"
 msgstr ""
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "$%1 - dovuta %2"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 - dovuta %2"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Impegni di pagamento cancellati: %1 (Totale selezionati: %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr ""
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr ""
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Clicca la freccia per vedere i pagamenti degli impegni di pagamento."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Mostra pagamenti"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Nascondi pagamenti"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Pagamento con carta di credito "
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Modifica Pagamento Programmato"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr ""
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
 msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
 msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
 msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] ""
-msgstr[1] ""
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "accedi a CiviPledge"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "Visualizza impegno"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "modifica impegno"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Crea ed aggiorna impegni di pagamento"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "elimina in CiviPledge"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Elimina impegni di pagamento"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
