--- a/po/ja_JP/extension.po
+++ b/po/ja_JP/extension.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 03:12+0000\n"
-"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,11 +27,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "エクステンションのキャッシュディレクトリ (%1) はウェブサーバで書き込可能ではありません。<a href=\"%2\">パスの設定ページ</a>でパスを修正してください。<br />"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "ext_repo_url が false に設定されているため、エクステンションのリモートURLを確認していません。"
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -53,10 +48,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "バージョン %2 と互換性のある CiviCRM のパブリックエクステンションディレクトリにはエクステンション (<a href=\"%1\">エクステンションのリクエストはこちらから</a>) がありません。互換性マークのないエクステンションをインストールする場合は、<a href=\"%3\">ダウンロードし、手動でエクステンションをインストール</a> (ウェブサーバに応じて) できる可能性があります。<br />"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "このバージョンで利用可能なエクステンションはありません"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -114,6 +105,13 @@ msgid ""
 msgstr "PHP インストールが ZIPアーカイブをサポートしていないため、この時点でエクステンションをインストールすることはできません。標準の PHP-ZIP 拡張モジュールをインストールするには、システム管理者に連絡してください。"
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "警告 : ダウンローダのHTTPリダイレクトで必要なファイルをダウンロードできない場合があります。これは、PHPの open_basedir か、セーフモードの設定が起因で問題が発生することがあります。"
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "エクステンションを展開できません : ディレクトリ構造に問題があります"
 
@@ -157,9 +155,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "エクステンションのコピー (%1) は、システムフォルダ (%2) になります。システムのコピーは保持されますが、新しいコピーが使用されます。"
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "警告 : ダウンローダのHTTPリダイレクトで必要なファイルをダウンロードできない場合があります。これは、PHPの open_basedir か、セーフモードの設定が起因で問題が発生することがあります。"
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr ""
