--- a/po/ja_JP/campaign.po
+++ b/po/ja_JP/campaign.po
@@ -10,9 +10,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 03:20+0000\n"
-"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,6 +31,10 @@ msgstr "過去のキャンペーン"
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
 msgstr "調査のSIDパラメータがありません。署名の処理ができません。"
+
+#: CRM/Campaign/BAO/Petition.php
+msgid "Petition Id and/or Activity Id is not of the type Positive."
+msgstr "請願 ID 及び / またはアクティビティ ID はポジティブタイプではありません。"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey - %1"
@@ -87,16 +91,8 @@ msgid "Campaign End Date"
 msgstr "キャンペーン終了日"
 
 #: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign Type ID"
-msgstr "キャンペーンタイプID"
-
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign Status ID"
-msgstr "キャンペーンのステータスID"
-
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign External Identifier"
-msgstr "キャンペーンの外部識別子"
+msgid "Campaign External ID"
+msgstr "外部キャンペーンID"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
@@ -130,21 +126,25 @@ msgstr "キャンペーンの目標"
 msgid "Goal Revenue"
 msgstr "目標とする収入"
 
-#: CRM/Campaign/DAO/Survey.php CRM/Campaign/Form/Survey/Results.php
-#: templates/CRM/Campaign/Form/ResultOptions.tpl
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "Recontact Interval"
-msgstr "再連絡の間隔"
+#: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
+msgid "Survey ID"
+msgstr "調査ID"
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Campaign ID"
+msgstr "調査キャンペーンID"
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Follow up Interval"
+msgstr "フォローアップの間隔"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Instructions"
 msgstr "説明"
 
-#: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
-#: templates/CRM/Campaign/Page/Petition.tpl
-#: templates/CRM/Campaign/Page/Survey.tpl
-msgid "Release Frequency"
-msgstr "解除の頻度"
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Hold Duration"
+msgstr "調査の保留時間"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Maximum number of contacts"
@@ -155,20 +155,32 @@ msgid "Default number of contacts"
 msgstr "デフォルトの連絡先の数"
 
 #: CRM/Campaign/DAO/Survey.php
-msgid "Last Modified Date"
-msgstr "最終更新日"
+msgid "Survey Is Active"
+msgstr "有効な調査"
 
 #: CRM/Campaign/DAO/Survey.php
-msgid "Bypass Confirm"
-msgstr "確認の省略"
+msgid "Is Default Survey"
+msgstr "デフォルトの調査"
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Created By"
+msgstr "調査の作成"
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Modified"
+msgstr "調査の変更"
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Modified On"
+msgstr "調査の変更"
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "No Email Verification"
+msgstr "メールの検証なし"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Edit Campaign"
 msgstr "キャンペーンを編集"
-
-#: CRM/Campaign/Form/Campaign.php
-msgid "Parent Id"
-msgstr "親ID"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "- select Parent -"
@@ -324,8 +336,11 @@ msgid "Instructions for interviewers"
 msgstr "面接調査担当者への説明"
 
 #: CRM/Campaign/Form/Survey/Main.php
-msgid "Release frequency"
-msgstr "解除の周期"
+#: templates/CRM/Campaign/Form/Search/Survey.tpl
+#: templates/CRM/Campaign/Page/Petition.tpl
+#: templates/CRM/Campaign/Page/Survey.tpl
+msgid "Release Frequency"
+msgstr "解除の頻度"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Release Frequency interval should be a positive number."
@@ -367,16 +382,18 @@ msgid "Create new result set"
 msgstr "新しい結果セットを作成"
 
 #: CRM/Campaign/Form/Survey/Results.php
-msgid "Create a new result set"
-msgstr "新しい結果セットを作成"
-
-#: CRM/Campaign/Form/Survey/Results.php
 msgid "Use existing result set"
 msgstr "既存の結果セットを使用"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Select Result Set"
 msgstr "結果セットの選択"
+
+#: CRM/Campaign/Form/Survey/Results.php
+#: templates/CRM/Campaign/Form/ResultOptions.tpl
+#: templates/CRM/Campaign/Form/Search/Survey.tpl
+msgid "Recontact Interval"
+msgstr "再連絡の間隔"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Enter at least one result option."
@@ -393,10 +410,6 @@ msgstr "調査の詳細レポート <a href='%1'>%2</a> を作成しました。
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Main Information"
 msgstr "主な情報"
-
-#: CRM/Campaign/Form/Survey/TabHeader.php
-msgid "Results"
-msgstr "結果"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
@@ -463,12 +476,18 @@ msgid "We could not found respondent for this survey to release."
 msgstr "この調査で予約解除できる回答者が見つかりません。"
 
 #: CRM/Campaign/Form/Task/Release.php
-msgid "%1 respondent(s) have been released."
-msgstr "%1 人の回答者を解除しました。"
+msgid "Respondent has been released."
+msgid_plural "%count respondents have been released."
+msgstr[0] "%count の回答者が解除されました。"
 
 #: CRM/Campaign/Form/Task/Release.php
-msgid "%1 respondents did not release."
-msgstr "%1 の回答者を解除しませんでした。"
+msgid "Released"
+msgstr "解除"
+
+#: CRM/Campaign/Form/Task/Release.php
+msgid "1 respondent did not release."
+msgid_plural "%count respondents did not release."
+msgstr[0] "%count の回答者を解除しませんでした。"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
@@ -484,8 +503,10 @@ msgid ""
 msgstr "この面接担当者が予約できる連絡先が上限に達しました。"
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "You can reserve a maximum of %1 contact(s) at a time for this survey."
-msgstr "この調査で予約できる連絡先は最高 %1 人までです。"
+msgid "You can reserve a maximum of %count contact at a time for this survey."
+msgid_plural ""
+"You can reserve a maximum of %count contacts at a time for this survey."
+msgstr[0] "この調査に時間で最大 %count の連絡先の予約ができます。"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
@@ -506,31 +527,84 @@ msgid "Respondent Reservation"
 msgstr "回答者の予約"
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "%1 Contact(s) have been reserved."
-msgstr "%1 の連絡先が予約されています。"
+msgid "%count contact has been reserved."
+msgid_plural "%count contacts have been reserved."
+msgstr[0] "%count の連絡先が予約されています。"
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "Respondent(s) has been added to %1 group(s)."
-msgstr "回答者はグループ %1 に追加されました。"
+msgid "They have been added to %1."
+msgstr "これらは %1 に追加しました。"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reservation Added"
 msgstr "予約の追加"
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "Reservation did not add for %1 contact(s)."
-msgstr "連絡先 %1 予約追加しませんでした。"
+msgid "Reservation did not add for %count contact."
+msgid_plural "Reservation did not add for %count contacts."
+msgstr[0] "%count の連絡先を予約に追加しませんでした。"
+
+#: CRM/Campaign/Info.php
+msgid "administer CiviCampaign"
+msgstr "CiviCampaign の管理"
+
+#: CRM/Campaign/Info.php
+msgid "Create new campaign, survey and petition types and their status"
+msgstr "新しいキャンペーン、調査と請願タイプとそのステータスを作成します。"
+
+#: CRM/Campaign/Info.php
+msgid "manage campaign"
+msgstr "キャンペーンの管理"
+
+#: CRM/Campaign/Info.php
+msgid "Create new campaigns, surveys and petitions, reserve respondents"
+msgstr "新しいキャンペーン、調査や請願、予備の回答を作成します。"
+
+#: CRM/Campaign/Info.php
+msgid "reserve campaign contacts"
+msgstr "予約キャンペーンの連絡先"
+
+#: CRM/Campaign/Info.php
+msgid "Reserve campaign contacts for surveys and petitions"
+msgstr "調査や請願の予約キャンペーン連絡先"
+
+#: CRM/Campaign/Info.php
+msgid "release campaign contacts"
+msgstr "解除されたキャンペーンの連絡先"
+
+#: CRM/Campaign/Info.php
+msgid "Release reserved campaign contacts for surveys and petitions"
+msgstr "調査や請願に関する解除予約キャンペーンの連絡先"
+
+#: CRM/Campaign/Info.php
+msgid "interview campaign contacts"
+msgstr "面接キャンペーンの連絡先"
+
+#: CRM/Campaign/Info.php
+msgid "Record survey and petition responses from their reserved contacts"
+msgstr "予約連絡先から請願の回答と調査を記録"
+
+#: CRM/Campaign/Info.php
+msgid "GOTV campaign contacts"
+msgstr "GOTV キャンペーンの連絡先"
+
+#: CRM/Campaign/Info.php
+msgid "Record that contacts voted"
+msgstr "連絡先の投票レコード"
+
+#: CRM/Campaign/Info.php
+msgid "sign CiviCRM Petition"
+msgstr "CiviCRM Petition 署名"
 
 #: CRM/Campaign/Page/AJAX.php
 msgid "Respondent Reserved."
 msgstr "回答者を予約しました。"
 
-#: CRM/Campaign/Page/AJAX.php
-msgid "Vote Recorded"
+#: CRM/Campaign/Page/AJAX.php templates/CRM/Campaign/Form/Gotv.tpl
+msgid "Vote Recorded."
 msgstr "投票が記録されました。"
 
-#: CRM/Campaign/Page/Campaign.php CRM/Campaign/Page/DashBoard.php
-#: templates/CRM/Campaign/Form/Campaign.tpl
+#: CRM/Campaign/Page/Campaign.php templates/CRM/Campaign/Form/Campaign.tpl
 msgid "Are you sure you want to delete this Campaign?"
 msgstr "このキャンペーンを削除してもよろしいですか？"
 
@@ -596,6 +670,11 @@ msgid "Search Survey"
 msgstr "調査を検索"
 
 #: CRM/Campaign/Page/DashBoard.php
+msgid "1 Day"
+msgid_plural "%count Days"
+msgstr[0] "%count 日"
+
+#: CRM/Campaign/Page/DashBoard.php
 msgid "view result set"
 msgstr "結果セットの表示"
 
@@ -648,10 +727,6 @@ msgid "Save as non voted."
 msgstr "未投票として保存"
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
-msgid "Vote Recorded."
-msgstr "投票が記録されました。"
-
-#: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Vote Cancelled."
 msgstr "投票のキャンセル"
 
@@ -671,9 +746,15 @@ msgstr "既に署名済みです。"
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
-"You have already signed this petition but you still <b>need to verify your email address</b>.</br>\n"
-"Please check your email inbox for the confirmation email. If you don't find it, verify if it isn't in your spam folder."
-msgstr "この請願署名に署名済みですが、<b>メールアドレスを確認してください</b>。<br />\nメールボックスで確認メールを確認してください。確認メールが見つからない場合は、迷惑フォルダーの中を確認してください。"
+"You have already signed this petition but you still <b>need to verify your "
+"email address</b>."
+msgstr "既にこの請願に署名していますが、あなたはまだ<b>メールアドレスの確認</b>をする必要があります。"
+
+#: templates/CRM/Campaign/Form/Petition/Signature.tpl
+msgid ""
+"Please check your email inbox for the confirmation email. If you don't find "
+"it, verify if it isn't in your spam folder."
+msgstr "確認メール用のメールが受信トレイにあるか確認してください。それでも見つからない場合は、迷惑フォルダを探してみてください。"
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Are you sure you want to delete this Petition?"
@@ -693,6 +774,10 @@ msgstr "集めたい連絡先に関するフィールド。"
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Fields about the petition."
 msgstr "請願署名に関するフィールド"
+
+#: templates/CRM/Campaign/Form/Petition.tpl
+msgid "Click here for new profile"
+msgstr ""
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "This title will be displayed at the top of the thank-you page."
@@ -734,10 +819,6 @@ msgid ""
 msgstr "10項目まで、このテーブルの複数オプションを入力してください (「その他の選択」をクリックすると選択項目を追加できます)。調査結果セットを選択すると、設定済みの結果セットのオプションを使うことができます。"
 
 #: templates/CRM/Campaign/Form/Search/Campaign.tpl
-msgid "No campaigns found."
-msgstr "キャンペーンが見つかりません"
-
-#: templates/CRM/Campaign/Form/Search/Campaign.tpl
 #: templates/CRM/Campaign/Page/Campaign.tpl
 msgid "Add Campaign"
 msgstr "キャンペーンを追加"
@@ -751,16 +832,8 @@ msgid "Status ID"
 msgstr "ステータスID"
 
 #: templates/CRM/Campaign/Form/Search/EmptyResults.tpl
-msgid "No matching respondent found."
-msgstr "条件に一致した回答者がありません。"
-
-#: templates/CRM/Campaign/Form/Search/EmptyResults.tpl
 msgid "if you are searching by respondent name, check your spelling"
 msgstr "回答者の名前で検索しているのであれば、ミスタイプがないか確認してください"
-
-#: templates/CRM/Campaign/Form/Search/Petition.tpl
-msgid "No petitions found."
-msgstr "請願署名が見つかりません。"
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
 msgid "Add Petition"
@@ -783,18 +856,10 @@ msgid "Search Petitions"
 msgstr "請願署名を検索"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "No surveys found."
-msgstr "調査がありません。"
-
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Add Survey"
 msgstr "調査を追加"
-
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "Survey ID"
-msgstr "調査ID"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Survey Type ID"
@@ -946,9 +1011,11 @@ msgstr "新しいグループに回答者を追加"
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.hlp
 msgid ""
-"Your organization can use Campaigns to track all constituent interactions related to a particular fund-raising or engagement effort. You can link\n"
-"activities, contributions, event participation, mailings, membership signups, and pledges to a particular campaign."
-msgstr "何らかの資金調達やアクティビティへの参加などに関する構成員全員の相互作用を追跡するためにキャンペーンを使うことができます。\n指定したキャンペーンで、アクティビティ、支援、イベントへの参加、メーリング、会員の申し込み、およびプレッジにリンクすることができます。"
+"Your organization can use Campaigns to track all constituent interactions "
+"related to a particular fund-raising or engagement effort. You can link "
+"activities, contributions, event participation, mailings, membership "
+"signups, and pledges to a particular campaign."
+msgstr "あなたの団体は、特定の資金調達や婚約への取り組みに関連するすべての構成要素の、相互作用を追跡するためにキャンペーンを使用することができます。あなたは、特定のキャンペーンにアクティビティ、支援、イベント参加、メーリング、会員申し込み、およびプレッジをリンクすることが可能です。"
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid "Show past campaign(s) in this select list."
@@ -960,13 +1027,9 @@ msgstr "現在有効なキャンペーンはありません。"
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid ""
-"If you want to associate this record with a campaign, you can <a "
-"href=\"%1\">create a campaign here</a>."
-msgstr "このレコードを何かのキャンペーンに関連付けるには、<a href=\"%1\">ここでキャンペーンを作成</a>できます 。"
-
-#: templates/CRM/Campaign/Page/Campaign.tpl
-msgid "No Campaigns found."
-msgstr "キャンペーンが見つかりません"
+"If you want to associate this record with a campaign, you can <a %1>create a"
+" campaign here</a>."
+msgstr "キャンペーンでこのレコードを関連付けたい場合は、<a %1>こちらキャンペーンを作成</a>することができます。"
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
 msgid ""
@@ -1040,172 +1103,18 @@ msgstr "連絡先の上限数"
 msgid "Default Number Of Contacts"
 msgstr "デフォルト連絡先数"
 
-#: templates/CRM/Campaign/Page/Petition.tpl
-#: templates/CRM/Campaign/Page/Survey.tpl
-msgid "No survey found."
-msgstr "調査が見つかりません。"
-
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey type entered. You can <a href='%1'>add one</a>."
 msgstr "調査タイプが入力されていません。<a href='%1'>追加</a>することができます。"
 
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign External ID"
-msgstr "外部キャンペーンID"
+#: CRM/Campaign/DAO/CampaignGroup.php
+msgid "Campaign Group ID"
+msgstr ""
 
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Campaign ID"
-msgstr "調査キャンペーンID"
+#: CRM/Campaign/DAO/CampaignGroup.php
+msgid "Campaign Group Type"
+msgstr ""
 
-#: CRM/Campaign/DAO/Survey.php
-msgid "Follow up Interval"
-msgstr "フォローアップの間隔"
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Hold Duration"
-msgstr "調査の保留時間"
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Is Active"
-msgstr "有効な調査"
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Is Default Survey"
-msgstr "デフォルトの調査"
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Created By"
-msgstr "調査の作成"
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Modified"
-msgstr "調査の変更"
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Modified On"
-msgstr "調査の変更"
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "No Email Verification"
-msgstr "メールの検証なし"
-
-#: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
-msgid ""
-"If you want to associate this record with a campaign, you can <a %1>create a"
-" campaign here</a>."
-msgstr "キャンペーンでこのレコードを関連付けたい場合は、<a %1>こちらキャンペーンを作成</a>することができます。"
-
-#: CRM/Campaign/BAO/Petition.php
-msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr "請願 ID 及び / またはアクティビティ ID はポジティブタイプではありません。"
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "Respondent has been released."
-msgid_plural "%count respondents have been released."
-msgstr[0] "%count の回答者が解除されました。"
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "Released"
-msgstr "解除"
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "1 respondent did not release."
-msgid_plural "%count respondents did not release."
-msgstr[0] "%count の回答者を解除しませんでした。"
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "You can reserve a maximum of %count contact at a time for this survey."
-msgid_plural ""
-"You can reserve a maximum of %count contacts at a time for this survey."
-msgstr[0] "この調査に時間で最大 %count の連絡先の予約ができます。"
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "%count contact has been reserved."
-msgid_plural "%count contacts have been reserved."
-msgstr[0] "%count の連絡先が予約されています。"
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "They have been added to %1."
-msgstr "これらは %1 に追加しました。"
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "Reservation did not add for %count contact."
-msgid_plural "Reservation did not add for %count contacts."
-msgstr[0] "%count の連絡先を予約に追加しませんでした。"
-
-#: CRM/Campaign/Info.php
-msgid "administer CiviCampaign"
-msgstr "CiviCampaign の管理"
-
-#: CRM/Campaign/Info.php
-msgid "Create new campaign, survey and petition types and their status"
-msgstr "新しいキャンペーン、調査と請願タイプとそのステータスを作成します。"
-
-#: CRM/Campaign/Info.php
-msgid "manage campaign"
-msgstr "キャンペーンの管理"
-
-#: CRM/Campaign/Info.php
-msgid "Create new campaigns, surveys and petitions, reserve respondents"
-msgstr "新しいキャンペーン、調査や請願、予備の回答を作成します。"
-
-#: CRM/Campaign/Info.php
-msgid "reserve campaign contacts"
-msgstr "予約キャンペーンの連絡先"
-
-#: CRM/Campaign/Info.php
-msgid "Reserve campaign contacts for surveys and petitions"
-msgstr "調査や請願の予約キャンペーン連絡先"
-
-#: CRM/Campaign/Info.php
-msgid "release campaign contacts"
-msgstr "解除されたキャンペーンの連絡先"
-
-#: CRM/Campaign/Info.php
-msgid "Release reserved campaign contacts for surveys and petitions"
-msgstr "調査や請願に関する解除予約キャンペーンの連絡先"
-
-#: CRM/Campaign/Info.php
-msgid "interview campaign contacts"
-msgstr "面接キャンペーンの連絡先"
-
-#: CRM/Campaign/Info.php
-msgid "Record survey and petition responses from their reserved contacts"
-msgstr "予約連絡先から請願の回答と調査を記録"
-
-#: CRM/Campaign/Info.php
-msgid "GOTV campaign contacts"
-msgstr "GOTV キャンペーンの連絡先"
-
-#: CRM/Campaign/Info.php
-msgid "Record that contacts voted"
-msgstr "連絡先の投票レコード"
-
-#: CRM/Campaign/Info.php
-msgid "sign CiviCRM Petition"
-msgstr "CiviCRM Petition 署名"
-
-#: CRM/Campaign/Page/DashBoard.php
-msgid "1 Day"
-msgid_plural "%count Days"
-msgstr[0] "%count 日"
-
-#: templates/CRM/Campaign/Form/Petition/Signature.tpl
-msgid ""
-"You have already signed this petition but you still <b>need to verify your "
-"email address</b>."
-msgstr "既にこの請願に署名していますが、あなたはまだ<b>メールアドレスの確認</b>をする必要があります。"
-
-#: templates/CRM/Campaign/Form/Petition/Signature.tpl
-msgid ""
-"Please check your email inbox for the confirmation email. If you don't find "
-"it, verify if it isn't in your spam folder."
-msgstr "確認メール用のメールが受信トレイにあるか確認してください。それでも見つからない場合は、迷惑フォルダを探してみてください。"
-
-#: templates/CRM/Campaign/Form/addCampaignToComponent.hlp
-msgid ""
-"Your organization can use Campaigns to track all constituent interactions "
-"related to a particular fund-raising or engagement effort. You can link "
-"activities, contributions, event participation, mailings, membership "
-"signups, and pledges to a particular campaign."
-msgstr "あなたの団体は、特定の資金調達や婚約への取り組みに関連するすべての構成要素の、相互作用を追跡するためにキャンペーンを使用することができます。あなたは、特定のキャンペーンにアクティビティ、支援、イベント参加、メーリング、会員申し込み、およびプレッジをリンクすることが可能です。"
+#: templates/CRM/Campaign/Page/SurveyType.tpl
+msgid "There are no survey types entered. You can <a href='%1'>add one</a>."
+msgstr ""
