--- a/po/ja_JP/grant.po
+++ b/po/ja_JP/grant.po
@@ -9,9 +9,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-10-11 21:01+0000\n"
-"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,14 +38,6 @@ msgstr "助成期日が NULL です"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "助成決定の日付が NULL です"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "助成タイプ %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "助成のステータス %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -92,10 +84,6 @@ msgid "Grant report received"
 msgstr "受領済の助成レポート"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "助成タイプID"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "助成金額"
 
@@ -107,10 +95,6 @@ msgstr "助成の通貨"
 msgid "Grant Rationale"
 msgstr "助成の理由"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "助成のステータスID"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "受領済の助成レポート"
@@ -118,6 +102,10 @@ msgstr "受領済の助成レポート"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "要請額<br />(元の通貨)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "申請者"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -128,12 +116,9 @@ msgid "Delete Grants"
 msgstr "助成を削除"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "助成を削除 : %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "選択された助成の数 : %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "%count の助成を削除しました。"
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -144,30 +129,46 @@ msgid "Update Grants"
 msgstr "助成の更新"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "助成の更新 : %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "更新済みの助成 : %1 (選択済み合計 : %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "CiviGrant にアクセス"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "すべての助成を表示"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "助成の編集"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "助成の作成と更新"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "CiviGrant で削除"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "助成の削除"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "助成"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "助成"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "助成を表示"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "助成を編集"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "この助成を削除してもよろしいですか？"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "助成を削除"
 
@@ -180,16 +181,8 @@ msgid "Granted"
 msgstr "助成"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "助成の印刷"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "助成をエクスポート"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "新しい助成"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -210,6 +203,14 @@ msgstr "助成送金日"
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(元の通貨)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "助成ステータス"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "助成タイプ"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -303,60 +304,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "このページは、これまでの %1 に対するすべての助成リストです。"
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "この連絡先の助成を記録する場合は<a accesskey='N' href='%1'>新しい助成</a>をクリックしてください。"
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "この連絡先の助成を記録するには <a %1>助成の追加</a> をクリックしてください。"
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "この連絡先に記録されている助成がありません。"
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "申請者"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "更新済みの助成 : %1 (選択済み合計 : %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "この連絡先の助成を記録するには <a %1>助成の追加</a> をクリックしてください。"
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "%count の助成を削除しました。"
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "CiviGrant にアクセス"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "すべての助成を表示"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "助成の編集"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "助成の作成と更新"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "CiviGrant で削除"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "助成の削除"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "助成ステータス"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "助成タイプ"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr ""
