po: update po/ja_JP/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ja_JP/batch.po
+++ b/po/ja_JP/batch.po
@@ -10,9 +10,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-10-11 20:59+0000\n"
-"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,6 +35,10 @@ msgstr "バッチに取引を追加 / 表示します"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "バッチの再開"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -61,12 +65,52 @@ msgid "No export format selected."
 msgstr "エクスポートのフォーマットが選択されていません。"
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "エクスポートされた日付"
+msgid "Batch ID"
+msgstr "バッチID"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "項目数"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "バッチ説明"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "バッチ作成"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "バッチ作成日"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "バッチ作成"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "バッチ更新日"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "スマートグループのバッチ"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "バッチ合計"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "項目のバッチ数"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "支払い手段のバッチ"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "バッチのエクスポート日"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "バッチデータ"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -85,6 +129,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "会員のバッチデータ入力"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "プレッジ支払いのバッチデータ入力"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "不一致を無視してバッチを処理しますか？"
 
@@ -93,16 +141,16 @@ msgid "Validate & Process the Batch"
 msgstr "確認してバッチを処理"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "一部のフィールドは除外されています。"
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "ソフトクレジット金量は、合計金額より大きい必要があります"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "会員タイプは必須です。"
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "単一のバッチで同じプレッジの支払い 2 つを記録することはできません。"
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -151,6 +199,10 @@ msgstr "予想される総額"
 msgid "Total amount entered"
 msgstr "入力された総額"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "オープンプレッジ (支払い日 - 金額)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "データ入力バッチ"
@@ -172,65 +224,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "このサイトで作成されたデータ入力バッチがありません。"
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "バッチID"
+msgid "Batch Payment Method"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "バッチタイトル"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "バッチ説明"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "バッチ作成"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "バッチ作成日"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "バッチ作成"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "バッチ更新日"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "スマートグループのバッチ"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "バッチ合計"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "項目のバッチ数"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "支払い手段のバッチ"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "バッチのエクスポート日"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "バッチデータ"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "プレッジ支払いのバッチデータ入力"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "単一のバッチで同じプレッジの支払い 2 つを記録することはできません。"
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "オープンプレッジ (支払い日 - 金額)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr ""
