po: update po/ja_JP/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ja_JP/pledge.po
+++ b/po/ja_JP/pledge.po
@@ -11,9 +11,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 03:17+0000\n"
-"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,12 +52,12 @@ msgid "Pledge Payment Status"
 msgstr "担保支払いのステータス"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
-msgstr "$%1 - 期日 %2 (期日超過)"
+msgid "%1 - due on %2 (overdue)"
+msgstr "%1 - 期日 %2 (期日超過)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
-msgstr "$%1 - 期日 %2"
+msgid "%1 - due on %2"
+msgstr "%1 - 期日 %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -81,14 +81,6 @@ msgid "Pledge Frequency Interval"
 msgstr "プレッジの頻度間隔"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "プレッジのステータス %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "プレッジ支払いステータス %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "プレッジはテストです"
 
@@ -99,6 +91,10 @@ msgstr "金融タイプ - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "金融ページ - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr "連絡先ID %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -148,10 +144,6 @@ msgstr "プレッジの更新日"
 msgid "Pledge Cancelled Date"
 msgstr "プレッジのキャンセル日"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "プレッジの表彰連絡先"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "事前通知の上限"
@@ -190,12 +182,12 @@ msgid "Reminders Sent"
 msgstr "送信済みの事前通知"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "プレッジの支払い予定を編集"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "プレッジの支払い予定が更新されました。"
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "プレッジ"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -302,6 +294,10 @@ msgid "Pledger Name or Email"
 msgstr "プレッジ者の名前かメール"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr "プレッジ名"
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "プレッジの検索"
 
@@ -310,12 +306,9 @@ msgid "Delete Pledges"
 msgstr "プレッジの削除"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "プレッジを削除しました : %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "選択されたプレッジの合計 : %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "%count のプレッジを削除しました。"
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -324,6 +317,30 @@ msgstr "プレッジリストを印刷"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "CiviCRM プレッジエンジン"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "CiviPledge にアクセス"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "プレッジを表示"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "プレッジの編集"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "プレッジの作成と編集"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "CiviPledge で削除"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "プレッジの削除"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -341,11 +358,11 @@ msgid ""
 "pledge payments."
 msgstr "プレッジをキャンセルすると、すべての予定されている (または未完の) プレッジもキャンセルされます。"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "プレッジの表示"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "プレッジの編集"
 
@@ -353,7 +370,7 @@ msgstr "プレッジの編集"
 msgid "Cancel Pledge"
 msgstr "プレッジのキャンセル"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "プレッジの削除"
 
@@ -374,20 +391,12 @@ msgid "Pledge Search"
 msgstr "プレッジの検索"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "プレッジ印刷"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "プレッジのエクスポート"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "プレッジの支払い予定を編集"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "プレッジの支払いの予定日"
+msgid "Adjust scheduled amount"
+msgstr "予定された額を調整"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -396,10 +405,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "この連絡先にメールアドレスのレコードがないため、プレッジの受付確認を送信できません。プレッジが記録されたときに受付確認を送信したいのであれば、プレッジを記録する前に「キャンセル」をクリックして概要タブで「編集」をクリックし、メールアドレスを追加してください。"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "新しいプレッジ"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -416,6 +421,10 @@ msgid ""
 msgstr "監査の記録を残し、支払いデータの消失を避けたい場合は、プレッジのキャンセルを検討してください。プレッジのステータスを「キャンセル済」にしてまだ支払われていないプレッジの支払いをキャンセルするには、まず、このフォームで「取消し」をクリックします。続いてプレッジリストで 詳細 &gt; リンクをクリックして、キャンセルを選択してください。"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "プレッジ"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -423,6 +432,7 @@ msgid ""
 msgstr "支払いの調整により、プレッジ合計が変更されました。元のプレッジ合計は %1 でした。"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "回払いで各回に"
 
@@ -445,10 +455,6 @@ msgstr "最初のプレッジ支払い日"
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "このプレッジの通知を自動的にメールで %1 に送信しますか？"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "このプレッジの確認を自動的に送信 :"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -474,20 +480,12 @@ msgstr "プレッジは最初の支払いを受け取るまで「保留」にな
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "OK をクリックして、このプレッジの記録を保存し、さらに %1 宛に確認書を送信する"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "このプレッジレコードを保存して今すぐ %1 に確認応答を送信するには、OKをクリックしてください。"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "プレッジ者"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "支払回数"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "毎"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -514,10 +512,6 @@ msgid "Payments Ended Date"
 msgstr "支払い終了日"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "プレッジに一致する結果がありません。"
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -530,8 +524,16 @@ msgid ""
 msgstr "日付や金額の範囲で検索しているのであれば、範囲を広げてみてください。"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "プレッジ支払いを表示するには %1 をクリック。"
+msgid "Click arrow to view pledge payments."
+msgstr "プレッジの支払い表示する場合は、矢印をクリックしてください。"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "支払いの表示"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "支払いを非表示"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -551,10 +553,6 @@ msgstr "支払いは"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "開始の日付"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "プレッジした日付"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -605,20 +603,12 @@ msgid "Amount Paid"
 msgstr "支払い額"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>支払いを表示</a>"
+msgid "Credit Card Payment"
+msgstr "クレジットカード決済"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>支払いを記録 (小切手、現金、電子決済 ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>クレジットカード払いをする</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>支払い予定を編集</a>"
+msgid "Edit Scheduled Payment"
+msgstr "支払い予定の編集"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -638,9 +628,10 @@ msgstr "事前通知を送信するには :"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "サイト管理者が、プレッジ支払いステータスの更新と事前通知の送信 (UpdatePledgeRecord.php) のためのスクリプトを設定する必要があります。"
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "サイト管理者は、プレッジの支払いステータスを更新し、事前通知を送信するための予定されたジョブを (管理 > システムの設定 > 予定されたジョブ) 設定する必要があります。"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -660,13 +651,17 @@ msgstr "これまで %1 から受け取ったプレッジ"
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "<a href='%1'>プレッジを追加</a>をクリックして、この連絡先から受け取った新しいプレッジを記録。"
+msgstr "この連絡先から受信した新たなプレッジを記録するため <a %1>プレッジの追加</a> をクリックしてください。"
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "この連絡先からのプレッジは記録されていません。"
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -792,93 +787,38 @@ msgstr "あなたの寛大なご支援に感謝致します。"
 msgid "Pledge Payment Reminder"
 msgstr "プレッジ支払いの事前通知"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 - 期日 %2 (期日超過)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 - 期日 %2"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "プレッジを削除しました : %1 (選択合計 : %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "予定された額を調整"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "このプレッジレコードを保存して今すぐ %1 に確認応答を送信するには、OKをクリックしてください。"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "プレッジの支払い表示する場合は、矢印をクリックしてください。"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "支払いの表示"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "支払いを非表示"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "クレジットカード決済"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "支払い予定の編集"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "サイト管理者は、プレッジの支払いステータスを更新し、事前通知を送信するための予定されたジョブを (管理 > システムの設定 > 予定されたジョブ) 設定する必要があります。"
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "この連絡先から受信した新たなプレッジを記録するため <a %1>プレッジの追加</a> をクリックしてください。"
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
-msgstr "連絡先ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
+msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
-msgstr "プレッジ名"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
+msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "%count のプレッジを削除しました。"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "CiviPledge にアクセス"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "プレッジを表示"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "プレッジの編集"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "プレッジの作成と編集"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "CiviPledge で削除"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "プレッジの削除"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
