--- a/po/ko_KR/queue.po
+++ b/po/ko_KR/queue.po
@@ -1,4 +1,4 @@
-# Copyright CiviCRM LLC (c) 2004-2014
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
@@ -7,10 +7,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2014-08-27 13:25-0400\n"
-"PO-Revision-Date: 2014-10-31 05:23+0000\n"
-"Last-Translator: Josh Kim <joshkkim@gmail.com>\n"
-"Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/civicrm/language/ko_KR/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,3 +36,7 @@ msgstr "대기열 항목 데이터"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "대기열 실행자"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
